retry download image

--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "author": "nico",
   "license": "MIT",
   "dependencies": {
+    "async-retry": "^0.3.0",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "lodash": "^4.17.4",
     "mz": "^2.6.0",
     "nedb": "^1.8.0",
     "nedb-promise": "^2.0.1",
+    "progress": "^2.0.0",
     "request": "^2.81.0",
     "request-promise": "^4.2.1"
   },
