--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "get-ms-token",
+  "name": "drive-sync",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "author": "nico",
   "license": "MIT",
   "dependencies": {
-    "async-retry": "^0.3.0",
+    "async-retry": "^1.1.1",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "lodash": "^4.17.4",
@@ -19,7 +19,7 @@
   },
   "devDependencies": {
     "eslint": "^3.19.0",
-    "eslint-config-airbnb-base": "^11.1.3",
-    "eslint-plugin-import": "^2.2.0"
+    "eslint-config-airbnb-base": "^11.2.0",
+    "eslint-plugin-import": "^2.3.0"
   }
 }
